# rufendec

./: .gitignore  .rustc_info.json  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  SECURITY.md
.github/workflows/: publish.yml  release-binaries.yml  release.yml  rust.yml
attribution/: dependencies.toml  self.toml
rufendec-app/: README.md  package.json
rufendec-app/src/: index.html  main.js  styles.css
rufendec-app/src-tauri/: Cargo.toml  tauri.conf.json
rufendec-app/src-tauri/capabilities/: main.json
rufendec-app/src-tauri/icons/: README.md  icon.icns
rufendec-app/src-tauri/src/: encryption.rs  main.rs
rufendec-app/src-tauri/src/rufendec/: common.rs  config.rs  display.rs  log.rs  main.rs  mod.rs  notice.txt  operations.rs  secrets.rs
src/: common.rs  config.rs  display.rs  log.rs  main.rs  notice.txt  operations.rs  secrets.rs  warning.txt
