[package]
name = "rufendec"
version = "0.6.1"
edition = "2021"
description = "Rufendec (The Rust File Encryptor-Decryptor) is a lightweight CLI tool designed for AES-256 encryption and decryption. This tool simplifies the process of securing the contents of a user specified source directory. Operating in ECB/GCM modes, Rufendec maintains the original file names and sub-directory structure in the target directory. Explore the simplicity of Rust for robust encryption and decryption tasks with Rufendec."
authors = ["Venkatesh Omkaram"]
notices = ["Copyright (c) 2023 Venkatesh Omkaram"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/omkarium/rufendec"
homepage = "https://github.com/omkarium/rufendec"
readme = "README.md"
keywords = ["aes", "aes-256", "aes-gcm", "file-encryption-tool", "encryption", "encrypt"]
categories = ["cryptography"]
rust-version = "1.75.0"

[dependencies]
byte-aes = "0.2.2"
clap = { version = "4.4.11", features = ["derive"] }
lazy_static = "1.4.0"
rayon = "1.8.0"
chrono = "0.4.31"
aes-gcm = "0.10.3"
pbkdf2 = { version = "0.12.2", features = ["simple"] }
sha2 = "0.10.8"
rpassword = "7.3.1"
walkdir = "2"
indicatif = "0.17.7"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

