[package]
name = "rufendec"
version = "0.8.0"
edition = "2021"
description = "Rufendec is a lightweight CLI tool for AES-256 encryption and decryption, preserving file names and directory structure. With support for ECB/GCM modes, it simplifies securing and restoring files with ease, all powered by Rust."
authors = ["Venkatesh Omkaram"]
notices = ["Copyright (c) 2023 Venkatesh Omkaram"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/omkarium/rufendec"
homepage = "https://github.com/omkarium/rufendec"
readme = "README.md"
keywords = ["aes", "aes-256", "aes-gcm", "encryption", "encrypt", "decrypt"]
categories = ["cryptography"]
rust-version = "1.75.0"

[dependencies]
byte-aes = "0.2.2"
clap = { version = "4.4.11", features = ["derive"] }
lazy_static = "1.4.0"
rayon = "1.8.0"
chrono = "0.4.31"
aes-gcm = "0.10.3"
pbkdf2 = { version = "0.12.2", features = ["simple"] }
sha2 = "0.10.8"
rpassword = "7.3.1"
walkdir = "2"
indicatif = "0.17.7"
human_bytes = "0.4.3"
zeroize= "1.7.0"
colored = "2.1.0"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

