[package]
name = "rufendec-app"
version = "0.1.0"
description = "Rufendec is a lightweight Desktop App for AES-256 encryption and decryption, preserving file names and directory structure. With support for ECB/GCM modes, it simplifies securing and restoring files with ease, all powered by Rust."
authors = ["Venkatesh Omkaram"]
notices = ["Copyright (c) 2023 Venkatesh Omkaram"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/omkarium/rufendec"
homepage = "https://github.com/omkarium/rufendec"
keywords = ["aes-256", "aes-gcm", "encrypt", "decrypt", "filesystem" ]
categories = ["cryptography"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"

# Rufendec dependencies
byte-aes = "0.2.2"
clap = { version = "4.4.11", features = ["derive"] }
lazy_static = "1.5.0"
rayon = "1.10.0"
chrono = "0.4.39"
aes-gcm = "0.10.3"
pbkdf2 = { version = "0.12.2", features = ["simple"] }
sha2 = "0.10.8"
rpassword = "7.3.1"
walkdir = "2.5.0"
indicatif = "0.17.7"
human_bytes = "0.4.3"
zeroize = "1.8.1"
colored = "2.1.0"
file_shred = "1.2.1"
rand = "0.9.0"
base64 = "0.22.1"
regex = "1.11.1"
argon2 = "0.5.3"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
